[package]
name = "tianlu-intel-core"
version = "0.1.0"
edition = "2021"
authors = ["Tianlu Lab <contact@tianlu.lab>"]
description = "Core engine for TL-ICScan vulnerability intelligence tool"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
serde_yaml = "0.9.34"
csv = "1.3"
thiserror = "2.0.17"
# Pin home crate to avoid edition2024 error in newer versions
home = "=0.5.9"
